se acomodaron los div y los parrafos y se le agrego nav

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,20 @@
 .probar{
     width: 300px;
-    height: 600px;
+    height: 800px;
     border-radius: 2px;
     padding: 2px;
     margin: 2px;
+    border-color: black;
+    margin:  5px;
+
+
 }
 .des{
-    
+
     height: 300px;
-    
+    border: 1px;
 }
+.btn{
+    margin-top: 50px;
+}
+
