--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 .probar{
     width: 300px;
-    height: 800px;
+    height: 720px;
     border-radius: 2px;
     padding: 2px;
     margin: 2px;
@@ -14,7 +14,18 @@
     height: 300px;
     border: 1px;
 }
-.btn{
-    margin-top: 50px;
+
+.row{
+    display: grid;
+    grid-template-columns: repeat(
+        auto-fit,
+        minmax(
+            300px,
+            1fr
+        )
+    )
+   
+
+
 }
 
