--- a/styles/btn.css
+++ b/styles/btn.css
@@ -8,6 +8,9 @@
     background-size: 200% 100%;
     background-position: 100% 0;
     transition: background-position .5s;
+    display: flex;
+    justify-content: center;
+   
   }
   
   .btn:hover {
