--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+
 .probar{
     width: 300px;
     height: 720px;
@@ -28,4 +29,10 @@
 
 
 }
+.dimension{
+    width: 500px;
+    height: 500px;
+}
+
+
 
