--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,6 @@
-
+body{
+    background: linear-gradient(220.55deg, #565656 0%, #181818 100%);
+}
 .probar{
     width: 300px;
     height: 720px;
@@ -7,7 +9,8 @@
     margin: 2px;
     border-color: black;
     margin:  5px;
-
+    background-color: black;
+    color: aliceblue;
 
 }
 .des{
@@ -25,7 +28,7 @@
             1fr
         )
     )
-   
+    
 
 
 }
