--- a/styles/btn.css
+++ b/styles/btn.css
@@ -1,4 +1,4 @@
-.btn {
+.btn1 {
     margin-top: 15px;
     padding: 0.6em 1.2em;
     border-radius: 0.25em;
@@ -13,6 +13,6 @@
    
   }
   
-  .btn:hover {
+  .btn1:hover {
     background-position: 0 0;
   }
